// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SerialConsole in the DISCONNECTED state 1`] = `
<DocumentFragment>
  <div
    class="consoleSerial-0-2-1"
  >
    <div
      class="pf-v6-c-empty-state"
    >
      <div
        class="pf-v6-c-empty-state__content"
      >
        <div
          class="pf-v6-c-empty-state__header"
        >
          <div
            class="pf-v6-c-empty-state__title"
          >
            <h1
              class="pf-v6-c-empty-state__title-text"
            >
              My text for Disconnected
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-c-empty-state__footer"
        >
          <button
            aria-disabled="false"
            class="pf-v6-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            My text for Connect
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SerialConsole in the LOADING state 1`] = `
<DocumentFragment>
  <div
    class="consoleActionsSerial-0-2-2"
  >
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-1"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      Disconnect
    </button>
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-2"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      Reset
    </button>
  </div>
  <div
    class="consoleSerial-0-2-1"
  >
    <div
      class="pf-v6-c-empty-state"
    >
      <div
        class="pf-v6-c-empty-state__content"
      >
        <div
          class="pf-v6-c-empty-state__header"
        >
          <div
            class="pf-v6-c-empty-state__icon"
          >
            <svg
              aria-hidden="false"
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-v6-c-spinner pf-m-xl"
              role="progressbar"
              viewBox="0 0 100 100"
            >
              <circle
                class="pf-v6-c-spinner__path"
                cx="50"
                cy="50"
                fill="none"
                r="45"
              />
            </svg>
          </div>
          <div
            class="pf-v6-c-empty-state__title"
          >
            <h1
              class="pf-v6-c-empty-state__title-text"
            >
              My text for Loading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SerialConsole with CONNECTED state renders 1`] = `
<DocumentFragment>
  <div
    class="consoleActionsSerial-0-2-2"
  >
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-3"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      My text for Disconnect
    </button>
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-4"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      Reset
    </button>
  </div>
  <div
    class="consoleSerial-0-2-1"
  >
    <div
      role="list"
    >
      <div
        class="terminal xterm focus"
        dir="ltr"
        tabindex="0"
      >
        <div
          class="xterm-accessibility"
          tabindex="0"
        >
          <div
            class="xterm-accessibility-tree"
            role="list"
          >
            <div
              aria-posinset="1"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="2"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="3"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="4"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="5"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="6"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="7"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="8"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="9"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="10"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="11"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="12"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="13"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="14"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="15"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="16"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="17"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="18"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="19"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="20"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="21"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="22"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="23"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="24"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="25"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="26"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="27"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="28"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="29"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="30"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="31"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="32"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="33"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="34"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="35"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="36"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="37"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="38"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="39"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="40"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="41"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="42"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="43"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              aria-posinset="44"
              aria-setsize="44"
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
          </div>
          <div
            aria-live="assertive"
            class="live-region"
          />
        </div>
        <div
          class="xterm-viewport"
          style="background-color: rgb(0, 0, 0);"
        >
          <div
            class="xterm-scroll-area"
          />
        </div>
        <div
          class="xterm-screen"
        >
          <div
            class="xterm-helpers"
          >
            <textarea
              aria-label="Terminal input"
              aria-multiline="false"
              autocapitalize="off"
              autocorrect="off"
              class="xterm-helper-textarea"
              spellcheck="false"
              tabindex="0"
            />
            <span
              aria-hidden="true"
              class="xterm-char-measure-element"
            >
              W
            </span>
            <div
              class="composition-view"
            />
          </div>
          <canvas
            class="xterm-text-layer"
            style="z-index: 0;"
          />
          <canvas
            class="xterm-selection-layer"
            style="z-index: 1;"
          />
          <canvas
            class="xterm-link-layer"
            style="z-index: 2;"
          />
          <canvas
            class="xterm-cursor-layer"
            style="z-index: 3;"
          />
          <div
            class="xterm-decoration-container"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
